# dmsc

./: .clang-format  .gitignore  TODO.md  benchmark.py  pyproject.toml  readme.md  setup.py  test_dmsc.py
csrc/: __init__.py  cell_complex.hxx  dmsc.py  dmsc_cpu.cpp  dmsc_gpu.cpp  dmsc_struct.hxx  managed_tensor.hxx  union_find.hxx
csrc/cpu/: arcs_geometry.hxx  arcs_geometry_struct.hxx  arcs_simplification.hxx  arcs_simplification_test.hxx  arcs_topology.hxx  arcs_topology_struct.hxx  cell_compare.hxx  cell_groups.hxx  cell_groups_struct.hxx  critical_points.hxx  critical_points_struct.hxx  gradient.hxx  gradient_struct.hxx  persistence.hxx  persistence_struct.hxx  workspace.hxx
csrc/gpu/: arcs_geometry_struct.hxx  arcs_topology_helpers.hxx  arcs_topology_struct.hxx  dmsc_cuda.hxx  dmsc_impl.hxx  dmsc_mps.hxx  gradient_struct.hxx  trace_saddles_helpers.hxx  workspace.hxx
csrc/gpu/cuda/: arcs_simplification.cu  cell_groups.cu  critical_points.cu  critical_points_thrust.cu  trace_from_saddles.cu  trace_raw_arcs_geometry.cu
csrc/gpu/metal/: arcs_simplification.metal  (+3 more)
dmsc/: __init__.py  dmsc.py  plots.py  synthetic.py
dmsc/csrc/: dmsc_cpu.cpp  dmsc_gpu.cpp  input_validation.hxx  managed_tensor.hxx  offset_coords.hxx
tests/: generate_ground_truth.py  test_api.py  test_regression.py
tests/data/: landscape_32x32.pt  ms_gpu_dual_flt.pt  ms_gpu_dual_raw.pt  ms_gpu_primal_flt.pt  ms_gpu_primal_raw.pt  ms_mt_dual_flt.pt  ms_mt_dual_raw.pt  ms_mt_primal_flt.pt  ms_mt_primal_raw.pt  ms_st_dual_flt.pt  ms_st_dual_raw.pt  ms_st_primal_flt.pt  ms_st_primal_raw.pt
(+36 files in other folders)
